# arcaea-ml

./: pyproject.toml
arcaea_ml/: __main__.py  arcaea_jackets.onnx  crop.py  definition.py  rois.py  sizes.py  train_model.py  types.py
arcaea_ml/dataset/: packlist  unlocks
